Add Database Injection with connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PlaygroundConnection": "DefaultConnection"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
